# cookiecutter_pymodule

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py
